# ndarray-stats

./: Cargo.toml  README.md
src/: correlation.rs  sort.rs
src/histogram/: bins.rs  grid.rs  histograms.rs
src/maybe_nan/: mod.rs
src/quantile/: mod.rs
tests/: deviation.rs  maybe_nan.rs  quantile.rs  sort.rs  summary_statistics.rs
