[package]
name = "ndarray-stats"
version = "0.7.0"
authors = ["Jim Turner <ndarray-stats@turner.link>", "LukeMathWalker <rust@lpalmieri.com>", "n12"]
edition = "2021"

license = "MIT/Apache-2.0"

repository = "https://github.com/kn0sys/ndarray-stats"
documentation = "https://docs.rs/kn0sys-ndarray-stats/"
readme = "README.md"

description = "Statistical routines for ArrayBase, the n-dimensional array data structure provided by ndarray."

keywords = ["array", "multidimensional", "statistics", "matrix", "ndarray"]
categories = ["data-structures", "science"]

[dependencies]
ndarray = {package = "kn0sys_ndarray", version = "0.17"}
noisy_float = "0.2.0"
num-integer = "0.1"
num-traits = "0.2"
rand = "0.9.0"
itertools = { version = "0.13", default-features = false }
indexmap = "2.4"

[dev-dependencies]
ndarray = { package = "kn0sys_ndarray", version = "0.17.0", features = ["approx"] }
criterion = "0.3"
ndarray-rand = {package = "kn0sys_ndarray_rand", version = "0.16.0"}
approx = "0.5"
num-bigint = "0.4.0"

[[bench]]
name = "sort"
harness = false

[[bench]]
name = "summary_statistics"
harness = false

[[bench]]
name = "deviation"
harness = false
